force-app/main/default/objects/plaunch__generalsettings__c/plaunch__generalsettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Basic settings for PipeLaunch</description>
    <label>PipeLaunch Custom Settings</label>
</CustomObject>