force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__AdvancedFlags__c.field-meta.xml
<CustomField>
    <fullName>plaunch__AdvancedFlags__c</fullName>
    <description>Enable advanced parameters. Flags in comma-separated format</description>
    <inlineHelpText>Enable advanced parameters. Flags in comma-separated format.
        Available flags:
        LINKEDINMATCH-STRICT-&gt; speedup the match of existing records by searching only by the
        canonical LinkedIn™ URL</inlineHelpText>
    <label>Advanced Flags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>