force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Analytics__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Analytics__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable analytics service to improve your user experience</description>
    <inlineHelpText>Enable analytics service to improve your user experience. By activating this
        option you agree with the following privacy policy: https://pipelaunch.com/privacy-policy</inlineHelpText>
    <label>Enable Analytics</label>
    <type>Checkbox</type>
</CustomField>