force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Company_Information_Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Company_Information_Integration_Key__c</fullName>
    <description>Company Information Integration API Key</description>
    <inlineHelpText>Set this value at Organization Level Value only. Make sure you keep this credential private</inlineHelpText>
    <label>Company Information Integration API Key</label>
    <length>128</length>
    <type>Text</type>
</CustomField>