force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Condition_for_Planning__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Condition_for_Planning__c</fullName>
    <inlineHelpText>You can add additional SOQL condition to filter the contacts to be generated in the planning view</inlineHelpText>
    <label>Condition for Planning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>