force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Contact_Scoring_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact_Scoring_Field_Name__c</fullName>
    <inlineHelpText>Please enter the field name where you currently store the scoring for a contact (e.g. &apos;contact_score__c&apos;). NOTE: The field must be a numeric field type.</inlineHelpText>
    <label>Contact Scoring Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>