force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Filter_Contact_by_Owner__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Filter_Contact_by_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>PipeLaunch Planning automatically filter out contacts where the current user is not the Contacts owner. N.B. the user will still be able to manually add contacts where is not the account owner.</inlineHelpText>
    <label>Filter Contact by Owner</label>
    <type>Checkbox</type>
</CustomField>