force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Flow_For_New_Contact_Or_Lead__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Flow_For_New_Contact_Or_Lead__c</fullName>
    <description>Flow For New Contact Or Lead</description>
    <label>Flow For New Contact Or Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>