force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__flowContactLeave__c.field-meta.xml
<CustomField>
    <fullName>plaunch__flowContactLeave__c</fullName>
    <label>Flow for Contact Leave</label>
    <length>255</length>
    <type>Text</type>
</CustomField>