force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Initial_Settings_Setup_Completed__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Initial_Settings_Setup_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Store if the Initial Settings Setup was completed by the system administrator</description>
    <inlineHelpText>NOTE: this setting is managed directly by PipeLaunch.</inlineHelpText>
    <label>Initial Settings Setup Completed</label>
    <type>Checkbox</type>
</CustomField>