force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__News_sources__c.field-meta.xml
<CustomField>
    <fullName>plaunch__News_sources__c</fullName>
    <label>News sources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>