force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Relevant_Engagement_in_days__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Relevant_Engagement_in_days__c</fullName>
    <defaultValue>60</defaultValue>
    <inlineHelpText>Timeframe Number of days taken into consideration by: Activity History, Pr</inlineHelpText>
    <label>Relevant Engagement (days)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>