force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Relevant_job_openings__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Relevant_job_openings__c</fullName>
    <label>Relevant job openings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>