force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Relevant_job_openings_All__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Relevant_job_openings_All__c</fullName>
    <description>Relevant job openings (include ALL of these keywords)</description>
    <inlineHelpText>Relevant job openings (include ALL of these keywords)</inlineHelpText>
    <label>Relevant job openings All</label>
    <length>255</length>
    <type>Text</type>
</CustomField>