force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Show_Existing_Contacts_ICP__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Show_Existing_Contacts_ICP__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Show existing Salesforce Contacts on Ideal Customer Profile Component</description>
    <inlineHelpText>If unchecked all existing salesforce contacts in CRM will be hidden - Only new contacts will be displayed</inlineHelpText>
    <label>Show Existing Contacts on ICP</label>
    <type>Checkbox</type>
</CustomField>