force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Suggested_Contacts_Region__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Suggested_Contacts_Region__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Region code for filtering suggested contacts. Global region is 0</description>
    <inlineHelpText>Region code for filtering suggested contacts. Global region is 0</inlineHelpText>
    <label>Suggested Contacts Region</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>