force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Task_Status_Completed_APIName__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Task_Status_Completed_APIName__c</fullName>
    <description>If you dont have &quot;Completed&quot; as API name for task status being completed, please set your custom API Name of the task status representing the completed state of a task</description>
    <label>Task Status Completed API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>