force-app/main/default/objects/plaunch__generalsettings__c/fields/plaunch__Warn_upcoming_events_min__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Warn_upcoming_events_min__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Warn about upcoming events (value in minutes)</description>
    <inlineHelpText>Warn about upcoming events (value in minutes)</inlineHelpText>
    <label>Warn upcoming events (min)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>